# fl-sam2-lora

./: .gitignore  DATASET_SETUP.md  ENHANCED_FEATURES.md  IMPROVEMENTS_SUMMARY.md  README.md  download_dataset.py  justfile  main.py  pyproject.toml  run_local_fl.py
docs/: SAM2-LoRA.md
fl-sam2-lora/: README.md  main.py  pyproject.toml
fl-sam2-lora/fl-sam2-lora/: __init__.py  client_app.py  server_app.py  task.py
notebooks/: do.ipynb  ds.ipynb  local.ipynb
