[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "fl-sam2-lora"
version = "1.0.0"
requires-python = ">=3.10"
description = "Federated Learning for Medical Image Segmentation using SAM2 with LoRA"
license = "Apache-2.0"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "segment-anything-2>=0.1.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "pydicom>=2.4.0",
    "nibabel>=5.0.0",
    "SimpleITK>=2.3.0",
    "syft_flwr>=0.4.3",
]

[tool.uv.sources.syft-flwr]
git = "https://github.com/OpenMined/syft-flwr/"
branch = "feat/syft-client-p2p"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "OpenMined"

[tool.flwr.app.components]
serverapp = "fl_sam2_segmentation.server_app:app"
clientapp = "fl_sam2_segmentation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
partition-id = 0
num-partitions = 1
min-available-clients = 1
min-fit-clients = 1
min-evaluate-clients = 1
fraction-fit = 1.0
fraction-evaluate = 1.0
# SAM2 specific config
modality = "ct"
target-size = 512
local-epochs = 3
learning-rate = 0.0001

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 2
